versioned_docs/version-2.11/reference/subsystems/yapf.mdx
---
title: yapf
description: |
  A formatter for Python files (https://github.com/google/yapf).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

A formatter for Python files (https://github.com/google/yapf).

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[yapf]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]yapf-skip`}
  env_repr='PANTS_YAPF_SKIP'
  toml_repr={`[yapf]
skip = <bool>`}
  default_repr={`False`}
>

Don&#x27;t use yapf when running `/home/josh/work/scie-pants/dist/pants fmt` and `/home/josh/work/scie-pants/dist/pants lint`.

</Option>

### `args`

<Option
  cli_repr={`--yapf-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr='PANTS_YAPF_ARGS'
  toml_repr={`[yapf]
args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to yapf, e.g. `--yapf-args='--no-local-style'`.

Certain arguments, specifically `--recursive`, `--in-place`, and `--parallel`, will be ignored because Pants takes care of finding all the relevant files and running the formatting in parallel.

</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--yapf-version=<str>`}
  env_repr='PANTS_YAPF_VERSION'
  toml_repr={`[yapf]
version = <str>`}
  default_repr={`yapf==0.32.0`}
>

Requirement string for the tool.

</Option>

### `extra_requirements`

<Option
  cli_repr={`--yapf-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_YAPF_EXTRA_REQUIREMENTS'
  toml_repr={`[yapf]
extra_requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "toml"\n]`}
>

Any additional requirement strings to use with the tool. This is useful if the tool allows you to install plugins or if you need to constrain a dependency to a certain version.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--yapf-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr='PANTS_YAPF_INTERPRETER_CONSTRAINTS'
  toml_repr={`[yapf]
interpreter_constraints = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "CPython>=3.7,<4"\n]`}
>

Python interpreter constraints for this tool.

</Option>

### `lockfile`

<Option
  cli_repr={`--yapf-lockfile=<str>`}
  env_repr='PANTS_YAPF_LOCKFILE'
  toml_repr={`[yapf]
lockfile = <str>`}
  default_repr={`<default>`}
>

Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.11.1/src/python/pants/backend/python/lint/yapf/yapf.lock for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds.

To use a custom lockfile, set this option to a file path relative to the build root, then run `/home/josh/work/scie-pants/dist/pants generate-lockfiles --resolve=yapf`.

As explained at https://www.pantsbuild.org/v2.11/docs/python-third-party-dependencies, lockfile generation via `generate-lockfiles` does not always work and you may want to manually generate the lockfile. You will want to set `[python].invalid_lockfile_behavior = 'ignore'` so that Pants does not complain about missing lockfile headers.

</Option>

### `console_script`

<Option
  cli_repr={`--yapf-console-script=<str>`}
  env_repr='PANTS_YAPF_CONSOLE_SCRIPT'
  toml_repr={`[yapf]
console_script = <str>`}
  default_repr={`yapf`}
>

The console script for the tool. Using this option is generally preferable to (and mutually exclusive with) specifying an --entry-point since console script names have a higher expectation of staying stable across releases of the tool. Usually, you will not want to change this from the default.

</Option>

### `entry_point`

<Option
  cli_repr={`--yapf-entry-point=<str>`}
  env_repr='PANTS_YAPF_ENTRY_POINT'
  toml_repr={`[yapf]
entry_point = <str>`}
  default_repr={`None`}
>

The entry point for the tool. Generally you only want to use this option if the tool does not offer a --console-script (which this option is mutually exclusive with). Usually, you will not want to change this from the default.

</Option>

### `config`

<Option
  cli_repr={`--yapf-config=<file_option>`}
  env_repr='PANTS_YAPF_CONFIG'
  toml_repr={`[yapf]
config = <file_option>`}
  default_repr={`None`}
>

Path to style file understood by yapf (https://github.com/google/yapf#formatting-style/).

Setting this option will disable `[yapf].config_discovery`. Use this option if the config is located in a non-standard location.

</Option>

### `config_discovery`

<Option
  cli_repr={`--[no-]yapf-config-discovery`}
  env_repr='PANTS_YAPF_CONFIG_DISCOVERY'
  toml_repr={`[yapf]
config_discovery = <bool>`}
  default_repr={`True`}
>

If true, Pants will include any relevant config files during runs (`.style.yapf`, `pyproject.toml`, and `setup.cfg`).

Use `[yapf].config` instead if your config is in a non-standard location.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
